correcting font-size value to obtain readable text on small displays

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 html {
-  font-size: 2vw;
+  font-size: calc(14px + 1.6vw);
 }
 :root {
   --primary-color: #0e0e0e;
